--- a/web/src/app/globals.css
+++ b/web/src/app/globals.css
@@ -2,6 +2,43 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Segment Font Family */
+@font-face {
+	font-family: 'Segment';
+	src: url('/fonts/Segment/Segment-Medium.otf') format('opentype');
+	font-weight: 400;
+	font-style: normal;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: 'Segment';
+	src: url('/fonts/Segment/Segment-Medium.otf') format('opentype');
+	font-weight: 500;
+	font-style: normal;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: 'Segment';
+	src: url('/fonts/Segment/Segment-Bold.otf') format('opentype');
+	font-weight: 600;
+	font-style: normal;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: 'Segment';
+	src: url('/fonts/Segment/Segment-Bold.otf') format('opentype');
+	font-weight: 700;
+	font-style: normal;
+	font-display: swap;
+}
+
+body {
+	font-family: 'Segment', system-ui, -apple-system, sans-serif;
+}
+
 :root {
 	line-height: 1.5;
 	font-weight: 400;
